objects/Demo__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Audience__c</fullName>
        <label>No of Audience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Demo</label>
    <nameField>
        <label>Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>